# fraud_detection

./: README.md  pyproject.toml
analysis/: analysis.ipynb
analysis/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
analysis/catboost_info/learn/: events.out.tfevents
app/: app.py
assets/: model_clf.joblib  sample.json  sample_fraud.json
src/: __init__.py  model.py  report.py
