[tool.poetry]
name = "fraud-detection"
version = "0.1.0"
description = ""
authors = ["thomasport <thomasportugal5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
seaborn = "^0.13.2"
jinja2 = "^3.1.4"
scikit-learn = "^1.5.2"
catboost = "^1.2.7"
optbinning = "^0.19.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
